[package]
name = "bitmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.37"
bitter = "0.6.1"
minifb = { version = "0.23.0", optional = true }

[features]
default = ["minifb-support"]
minifb-support = ["minifb"]

[[bin]]
name = "minifb"
required-features = ["minifb-support"]
